Add reminder to enable Virtual Machine Platform

--- a/windows/configurations/enableWSL.dsc.yaml
+++ b/windows/configurations/enableWSL.dsc.yaml
@@ -17,3 +17,4 @@ properties:
       settings:
         Name: Microsoft-Windows-Subsystem-Linux
         Ensure: Present
+    # TODO: Enable Virtual Machine Platform optional feature
