feat: Add Windsurf into packages

--- a/windows/configurations/setupLLM.dsc.yaml
+++ b/windows/configurations/setupLLM.dsc.yaml
@@ -30,3 +30,13 @@ properties:
         Source: winget
         Ensure: Present
         Version: "1.7.2"
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: installWindsurf
+      directives:
+        description: Install Windsurf
+        allowPrerelease: true
+      settings:
+        Id: Codeium.Windsurf
+        Source: winget
+        Ensure: Present
+        Version: "1.94.0"
